# AG51-Grocery

./: README.md
1ex60/: Voronoi.h  main.cpp
2ex60/: CMakeLists.txt  Mesh.h  Triangle.h  Vector2D.h  determinant.h  main.cpp
3.4.1/: BST.cpp  BST.h  CMakeLists.txt  main.cpp
Cars/: CMakeLists.txt  Cars.cpp  Cars.h  Icon.h  Mesh.cpp  Mesh.h  Polygon.cpp  Polygon.h  Triangle.h  Vector2D.cpp  Vector2D.h  Voronoi.cpp  Voronoi.h  determinant.cpp  determinant.h  main.cpp
Cars (2)/: CMakeLists.txt  CarMove.h  Cars.h  Icon.h  Mesh.cpp  Mesh.h  Polygon.h  Triangle.h  Vector2D.cpp  Vector2D.h  Voronoi.cpp  Voronoi.h  determinant.cpp  determinant.h  door.h  glutWindows.cpp  glutWindows.h  main.cpp
Cars/Data/: servers.txt
Delaunay-master/: CMakeLists.txt
GA/: Triangle.h  main.cpp
GA/Data/: servers.txt
GA_Project1-master/: CMakeLists.txt  Triangle.h  main.cpp
GA_new/: CMakeLists.txt  Triangle.h  main.cpp
GA_new/Data/severs_no_inside/: servers.txt
LCS/: CMakeLists.txt  main.cpp
ProjectCars/: CMakeLists.txt  Cars.cpp  Cars.h  Icon.h  Mesh.cpp  Mesh.h  Polygon.cpp  Polygon.h  Triangle.h  Vector2D.cpp  Vector2D.h  Voronoi.cpp  Voronoi.h  determinant.cpp  determinant.h  main.cpp
ProjectCars/Data/: pps.txt
cell_test/: CMakeLists.txt  main.cpp
circumscribe/: CMakeLists.txt  Triangle.h  Vector2D.h  main.cpp
dln_test/: CMakeLists.txt  main.cpp
ex58/: CMakeLists.txt  MyPolygon.h  grahams.h  main.cpp
ex60/: CMakeLists.txt  Mesh.h  Polygon.h  ToyCar.h  Triangle.h  Vector2D.h  Voronoi.h  main.cpp
exemple1/: CMakeLists.txt
exemple_rectangles/: CMakeLists.txt  main.cpp
exemple_texture_Gl/: CMakeLists.txt  main.cpp
exemple_texture_Gl/Textures/: pacman.tga  red_ghost.tga
glutInterface/: CMakeLists.txt  Doxyfile  glutWindow.h  main.cpp
graph_project/: AdjListDirNetwork.h  CMakeLists.txt  ShortestPathFloyd.h  TestShortestPathFloyd.cpp
h_kruskal/: CMakeLists.txt  assistance.h  heads.h
intership_test/: CMakeLists.txt  main.cpp
new11/: CMakeLists.txt  glutWindow.h  main.cpp
new_td16/: CMakeLists.txt  main.cpp
pj_Clion/: CMakeLists.txt  main.cpp
pj_tu/: CMakeLists.txt  assistance.h  heads.h  main.cpp
polygons2020/: CMakeLists.txt  MyPolygon.h  Vector2D.h  main.cpp
read_test/: CMakeLists.txt  main.cpp
td11/: CMakeCache.txt  CMakeLists.txt  main.cpp
td15/: CMakeLists.txt  list_students.csv  main.cpp
td16/: CMakeLists.txt  main.cpp
td17/: CMakeLists.txt  main.cpp
test/: main.cpp
test_11.2/: CMakeLists.txt  assistance.h  heads.h  main.cpp
tinycars/: CMakeLists.txt  Vector2D.h  car.cpp  car.h  constants.h  door.cpp  door.h  glutWindow.cpp  glutWindow.h  main.cpp
tinycars/textures/: femto-st_1024x512.tga  femto-st_1200x675.tga
vorTest/: CMakeLists.txt
辅助函数/: kdtree.cpp  kdtree.h  readme.txt  sort.h  辅助函数.rar
